--- a/resources.qrc
+++ b/resources.qrc
@@ -13,5 +13,6 @@
         <file>img/icons/player.ico</file>
         <file>img/icons/settings.ico</file>
         <file>img/auto.png</file>
+        <file>img/warrn.png</file>
     </qresource>
 </RCC>
