Added a early version of JukeBox which is a media player with network radio functionality module. Also I fixed a bug that caused AndroidAuto to crash application after returing to menu module.

--- a/aa_headunit.ui
+++ b/aa_headunit.ui
@@ -32,9 +32,7 @@
       </sizepolicy>
      </property>
      <property name="styleSheet">
-      <string notr="true">border: 1px solid white;
-border-radius:10%;
-color:white;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Back</string>
@@ -83,7 +81,7 @@ color:white;</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color:white;</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string>No phone connected</string>
